# SplatEngine

./: .gitignore  CMakeLists.txt  README.md
include/: COFFParser.h  Camera.h  CameraState.h  ComputeShader.h  GPUBuffer.h  Mesh.h  Shader.h  TileData.h  TileRasterizer.h
include/glad/: glad.h
shaders/: clear_depth.comp  clear_tiles.comp  debug_heatmap.comp  debug_tiles.comp  fullscreen.frag  fullscreen.vert  pass1_count.comp  pass2_prefix_sum.comp  pass3_bin.comp  pass4_rasterize_tiled.comp  rasterize.comp  test.comp
src/: COFFParser.cpp  Camera.cpp  ComputeShader.cpp  GPUBuffer.cpp  Shader.cpp  TileRasterizer.cpp  glad.c  main.cpp
